--- a/anticonceptivos.html
+++ b/anticonceptivos.html
@@ -23,6 +23,59 @@
   <main class="container mx-auto py-12 px-4">
     <h1 class="text-4xl font-bold text-blue-900 mb-6">Anticonceptivos</h1>
     <p class="text-lg text-gray-700">Esta es la página de Anticonceptivos. Aquí se mostrarán los productos relacionados con anticonceptivos.</p>
+    <section class="mt-10">
+      <h2 class="text-2xl font-semibold text-blue-900 mb-6">Productos Destacados</h2>
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
+        <!-- Product Card 1 -->
+        <div class="border rounded-lg p-4 shadow hover:shadow-lg transition">
+          <div class="h-40 bg-gray-200 rounded mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+          <h3 class="font-semibold text-lg mb-2">Producto 1</h3>
+          <p class="text-blue-900 font-bold">$10.000</p>
+        </div>
+        <!-- Product Card 2 -->
+        <div class="border rounded-lg p-4 shadow hover:shadow-lg transition">
+          <div class="h-40 bg-gray-200 rounded mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+          <h3 class="font-semibold text-lg mb-2">Producto 2</h3>
+          <p class="text-blue-900 font-bold">$12.000</p>
+        </div>
+        <!-- Product Card 3 -->
+        <div class="border rounded-lg p-4 shadow hover:shadow-lg transition">
+          <div class="h-40 bg-gray-200 rounded mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+          <h3 class="font-semibold text-lg mb-2">Producto 3</h3>
+          <p class="text-blue-900 font-bold">$8.000</p>
+        </div>
+        <!-- Product Card 4 -->
+        <div class="border rounded-lg p-4 shadow hover:shadow-lg transition">
+          <div class="h-40 bg-gray-200 rounded mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+          <h3 class="font-semibold text-lg mb-2">Producto 4</h3>
+          <p class="text-blue-900 font-bold">$15.000</p>
+        </div>
+        <!-- Product Card 5 -->
+        <div class="border rounded-lg p-4 shadow hover:shadow-lg transition">
+          <div class="h-40 bg-gray-200 rounded mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+          <h3 class="font-semibold text-lg mb-2">Producto 5</h3>
+          <p class="text-blue-900 font-bold">$9.000</p>
+        </div>
+        <!-- Product Card 6 -->
+        <div class="border rounded-lg p-4 shadow hover:shadow-lg transition">
+          <div class="h-40 bg-gray-200 rounded mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+          <h3 class="font-semibold text-lg mb-2">Producto 6</h3>
+          <p class="text-blue-900 font-bold">$11.000</p>
+        </div>
+        <!-- Product Card 7 -->
+        <div class="border rounded-lg p-4 shadow hover:shadow-lg transition">
+          <div class="h-40 bg-gray-200 rounded mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+          <h3 class="font-semibold text-lg mb-2">Producto 7</h3>
+          <p class="text-blue-900 font-bold">$14.000</p>
+        </div>
+        <!-- Product Card 8 -->
+        <div class="border rounded-lg p-4 shadow hover:shadow-lg transition">
+          <div class="h-40 bg-gray-200 rounded mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+          <h3 class="font-semibold text-lg mb-2">Producto 8</h3>
+          <p class="text-blue-900 font-bold">$13.000</p>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="bg-blue-900 text-white py-8 mt-12">
     <div class="container mx-auto text-center">
