--- a/medicamentos.html
+++ b/medicamentos.html
@@ -8,7 +8,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
 </head>
 <body class="bg-white font-['Roboto'] text-gray-900">
-  <!-- Header -->
   <header class="bg-white shadow-md">
     <div class="container mx-auto flex items-center justify-between p-4">
       <div class="text-2xl font-bold text-blue-900">Farmacias El Sol</div>
@@ -21,47 +20,63 @@
       </nav>
     </div>
   </header>
-
-  <!-- Main Content -->
   <main class="container mx-auto py-12 px-4">
     <h1 class="text-4xl font-bold text-blue-900 mb-6">Medicamentos</h1>
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8">
-      <div class="border border-gray-300 rounded-lg p-4 hover:shadow-lg transition">
-        <div class="h-48 bg-gray-200 rounded-md mb-4 flex items-center justify-center text-gray-400">Imagen</div>
-        <h3 class="font-semibold text-lg text-blue-900 mb-2">Medicamento 1</h3>
-        <p class="text-yellow-500 font-bold mb-2">$12,990</p>
-        <button class="w-full bg-yellow-400 text-blue-900 font-semibold py-2 rounded-md hover:bg-yellow-500 transition">
-          Comprar
-        </button>
+    <p class="text-lg text-gray-700">Esta es la página de Medicamentos. Aquí se mostrarán los productos relacionados con medicamentos.</p>
+    <section class="mt-10">
+      <h2 class="text-2xl font-semibold text-blue-900 mb-6">Productos Destacados</h2>
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
+        <!-- Product Card 1 -->
+        <div class="border rounded-lg p-4 shadow hover:shadow-lg transition">
+          <div class="h-40 bg-gray-200 rounded mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+          <h3 class="font-semibold text-lg mb-2">Producto 1</h3>
+          <p class="text-blue-900 font-bold">$10.000</p>
+        </div>
+        <!-- Product Card 2 -->
+        <div class="border rounded-lg p-4 shadow hover:shadow-lg transition">
+          <div class="h-40 bg-gray-200 rounded mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+          <h3 class="font-semibold text-lg mb-2">Producto 2</h3>
+          <p class="text-blue-900 font-bold">$12.000</p>
+        </div>
+        <!-- Product Card 3 -->
+        <div class="border rounded-lg p-4 shadow hover:shadow-lg transition">
+          <div class="h-40 bg-gray-200 rounded mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+          <h3 class="font-semibold text-lg mb-2">Producto 3</h3>
+          <p class="text-blue-900 font-bold">$8.000</p>
+        </div>
+        <!-- Product Card 4 -->
+        <div class="border rounded-lg p-4 shadow hover:shadow-lg transition">
+          <div class="h-40 bg-gray-200 rounded mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+          <h3 class="font-semibold text-lg mb-2">Producto 4</h3>
+          <p class="text-blue-900 font-bold">$15.000</p>
+        </div>
+        <!-- Product Card 5 -->
+        <div class="border rounded-lg p-4 shadow hover:shadow-lg transition">
+          <div class="h-40 bg-gray-200 rounded mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+          <h3 class="font-semibold text-lg mb-2">Producto 5</h3>
+          <p class="text-blue-900 font-bold">$9.000</p>
+        </div>
+        <!-- Product Card 6 -->
+        <div class="border rounded-lg p-4 shadow hover:shadow-lg transition">
+          <div class="h-40 bg-gray-200 rounded mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+          <h3 class="font-semibold text-lg mb-2">Producto 6</h3>
+          <p class="text-blue-900 font-bold">$11.000</p>
+        </div>
+        <!-- Product Card 7 -->
+        <div class="border rounded-lg p-4 shadow hover:shadow-lg transition">
+          <div class="h-40 bg-gray-200 rounded mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+          <h3 class="font-semibold text-lg mb-2">Producto 7</h3>
+          <p class="text-blue-900 font-bold">$14.000</p>
+        </div>
+        <!-- Product Card 8 -->
+        <div class="border rounded-lg p-4 shadow hover:shadow-lg transition">
+          <div class="h-40 bg-gray-200 rounded mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+          <h3 class="font-semibold text-lg mb-2">Producto 8</h3>
+          <p class="text-blue-900 font-bold">$13.000</p>
+        </div>
       </div>
-      <div class="border border-gray-300 rounded-lg p-4 hover:shadow-lg transition">
-        <div class="h-48 bg-gray-200 rounded-md mb-4 flex items-center justify-center text-gray-400">Imagen</div>
-        <h3 class="font-semibold text-lg text-blue-900 mb-2">Medicamento 2</h3>
-        <p class="text-yellow-500 font-bold mb-2">$9,490</p>
-        <button class="w-full bg-yellow-400 text-blue-900 font-semibold py-2 rounded-md hover:bg-yellow-500 transition">
-          Comprar
-        </button>
-      </div>
-      <div class="border border-gray-300 rounded-lg p-4 hover:shadow-lg transition">
-        <div class="h-48 bg-gray-200 rounded-md mb-4 flex items-center justify-center text-gray-400">Imagen</div>
-        <h3 class="font-semibold text-lg text-blue-900 mb-2">Medicamento 3</h3>
-        <p class="text-yellow-500 font-bold mb-2">$15,990</p>
-        <button class="w-full bg-yellow-400 text-blue-900 font-semibold py-2 rounded-md hover:bg-yellow-500 transition">
-          Comprar
-        </button>
-      </div>
-      <div class="border border-gray-300 rounded-lg p-4 hover:shadow-lg transition">
-        <div class="h-48 bg-gray-200 rounded-md mb-4 flex items-center justify-center text-gray-400">Imagen</div>
-        <h3 class="font-semibold text-lg text-blue-900 mb-2">Medicamento 4</h3>
-        <p class="text-yellow-500 font-bold mb-2">$7,990</p>
-        <button class="w-full bg-yellow-400 text-blue-900 font-semibold py-2 rounded-md hover:bg-yellow-500 transition">
-          Comprar
-        </button>
-      </div>
-    </div>
+    </section>
   </main>
-
-  <!-- Footer -->
   <footer class="bg-blue-900 text-white py-8 mt-12">
     <div class="container mx-auto text-center">
       <p>© 2024 Farmacias El Sol. Todos los derechos reservados.</p>
