Update navigation links in index.html for proper page redirection

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container mx-auto flex items-center justify-between p-4">
       <div class="text-2xl font-bold text-blue-900">Farmacias El Sol</div>
       <nav class="space-x-6 text-blue-900 font-semibold relative">
-        <a href="#" class="hover:text-yellow-500 transition">Inicio</a>
+        <a href="index.html" class="hover:text-yellow-500 transition">Inicio</a>
         <div class="group inline-block relative">
           <button class="hover:text-yellow-500 transition inline-flex items-center">
             <span>Productos</span>
@@ -29,22 +29,22 @@
             </svg>
           </button>
           <ul class="absolute hidden text-blue-900 pt-1 group-hover:block bg-white border border-gray-300 rounded shadow-lg w-48 z-10">
-            <li><a class="block px-4 py-2 hover:bg-yellow-400 hover:text-white transition" href="/dermocosmetica.html">Dermocosmética</a></li>
-            <li><a class="block px-4 py-2 hover:bg-yellow-400 hover:text-white transition" href="/medicamentos.html">Medicamentos</a></li>
-            <li><a class="block px-4 py-2 hover:bg-yellow-400 hover:text-white transition" href="/vitaminas-y-suplementos.html">Vitaminas y Suplementos</a></li>
-            <li><a class="block px-4 py-2 hover:bg-yellow-400 hover:text-white transition" href="/anticonceptivos.html">Anticonceptivos</a></li>
-            <li><a class="block px-4 py-2 hover:bg-yellow-400 hover:text-white transition" href="/infantil-y-mama.html">Infantil y Mamá</a></li>
-            <li><a class="block px-4 py-2 hover:bg-yellow-400 hover:text-white transition" href="/cuidado-de-la-piel.html">Cuidado de la Piel</a></li>
-            <li><a class="block px-4 py-2 hover:bg-yellow-400 hover:text-white transition" href="/higiene-y-cuidado-personal.html">Higiene y Cuidado Personal</a></li>
-            <li><a class="block px-4 py-2 hover:bg-yellow-400 hover:text-white transition" href="/cuidado-capilar.html">Cuidado Capilar</a></li>
-            <li><a class="block px-4 py-2 hover:bg-yellow-400 hover:text-white transition" href="/belleza.html">Belleza</a></li>
-            <li><a class="block px-4 py-2 hover:bg-yellow-400 hover:text-white transition" href="/bienestar-sexual.html">Bienestar Sexual</a></li>
-            <li><a class="block px-4 py-2 hover:bg-yellow-400 hover:text-white transition" href="/veterinaria.html">Veterinaria</a></li>
-            <li><a class="block px-4 py-2 hover:bg-yellow-400 hover:text-white transition" href="/asesoria-online.html">Asesoria Online</a></li>
+            <li><a class="block px-4 py-2 hover:bg-yellow-400 hover:text-white transition" href="dermocosmetica.html">Dermocosmética</a></li>
+            <li><a class="block px-4 py-2 hover:bg-yellow-400 hover:text-white transition" href="medicamentos.html">Medicamentos</a></li>
+            <li><a class="block px-4 py-2 hover:bg-yellow-400 hover:text-white transition" href="vitaminas-y-suplementos.html">Vitaminas y Suplementos</a></li>
+            <li><a class="block px-4 py-2 hover:bg-yellow-400 hover:text-white transition" href="anticonceptivos.html">Anticonceptivos</a></li>
+            <li><a class="block px-4 py-2 hover:bg-yellow-400 hover:text-white transition" href="infantil-y-mama.html">Infantil y Mamá</a></li>
+            <li><a class="block px-4 py-2 hover:bg-yellow-400 hover:text-white transition" href="cuidado-de-la-piel.html">Cuidado de la Piel</a></li>
+            <li><a class="block px-4 py-2 hover:bg-yellow-400 hover:text-white transition" href="higiene-y-cuidado-personal.html">Higiene y Cuidado Personal</a></li>
+            <li><a class="block px-4 py-2 hover:bg-yellow-400 hover:text-white transition" href="cuidado-capilar.html">Cuidado Capilar</a></li>
+            <li><a class="block px-4 py-2 hover:bg-yellow-400 hover:text-white transition" href="belleza.html">Belleza</a></li>
+            <li><a class="block px-4 py-2 hover:bg-yellow-400 hover:text-white transition" href="bienestar-sexual.html">Bienestar Sexual</a></li>
+            <li><a class="block px-4 py-2 hover:bg-yellow-400 hover:text-white transition" href="veterinaria.html">Veterinaria</a></li>
+            <li><a class="block px-4 py-2 hover:bg-yellow-400 hover:text-white transition" href="asesoria-online.html">Asesoria Online</a></li>
           </ul>
         </div>
-        <a href="#" class="hover:text-yellow-500 transition">Ofertas</a>
-        <a href="#" class="hover:text-yellow-500 transition">Contacto</a>
+        <a href="ofertas.html" class="hover:text-yellow-500 transition font-bold">Ofertas</a>
+        <a href="contacto.html" class="hover:text-yellow-500 transition">Contacto</a>
       </nav>
       <div>
         <input
@@ -63,49 +63,187 @@
       <p class="text-lg md:text-xl mb-8 max-w-3xl mx-auto">
         Tu salud y bienestar son nuestra prioridad en Farmacias El Sol. Descubre nuestras ofertas exclusivas y productos de calidad.
       </p>
-      <a href="#" class="inline-block bg-yellow-400 text-blue-900 font-bold px-8 py-3 rounded-md hover:bg-yellow-500 transition">
+      <a href="ofertas.html" class="inline-block bg-yellow-400 text-blue-900 font-bold px-8 py-3 rounded-md hover:bg-yellow-500 transition">
         Ver Ofertas
       </a>
     </div>
   </section>
 
-  <!-- Products Section -->
+  <!-- Product Slide Section -->
   <section class="container mx-auto py-12 px-4">
-    <h2 class="text-3xl font-bold text-blue-900 mb-8 text-center">Productos Destacados</h2>
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8">
-      <!-- Product Card -->
-      <div class="border border-gray-300 rounded-lg p-4 hover:shadow-lg transition">
-        <div class="h-48 bg-gray-200 rounded-md mb-4 flex items-center justify-center text-gray-400">Imagen</div>
-        <h3 class="font-semibold text-lg text-blue-900 mb-2">Producto 1</h3>
-        <p class="text-yellow-500 font-bold mb-2">$9,990</p>
-        <button class="w-full bg-yellow-400 text-blue-900 font-semibold py-2 rounded-md hover:bg-yellow-500 transition">
-          Comprar
-        </button>
+    <h2 class="text-3xl font-bold text-blue-900 mb-8 text-center">Ofertas Destacadas</h2>
+    <div class="relative">
+      <button id="prevBtn" class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-yellow-400 text-blue-900 p-2 rounded-full hover:bg-yellow-500 transition z-10">
+        &#8592;
+      </button>
+      <div id="carousel" class="overflow-hidden">
+        <div id="carouselInner" class="flex transition-transform duration-500">
+          <!-- 16 Product Cards for 4x4 slide -->
+          <div class="min-w-[25%] p-2">
+            <div class="border border-gray-300 rounded-lg p-4 hover:shadow-lg transition">
+              <div class="h-40 bg-gray-200 rounded-md mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+              <h3 class="font-semibold text-lg text-blue-900 mb-2">Producto 1</h3>
+              <p class="text-yellow-500 font-bold mb-2">$9,990</p>
+              <button class="w-full bg-yellow-400 text-blue-900 font-semibold py-2 rounded-md hover:bg-yellow-500 transition">
+                Comprar
+              </button>
+            </div>
+          </div>
+          <div class="min-w-[25%] p-2">
+            <div class="border border-gray-300 rounded-lg p-4 hover:shadow-lg transition">
+              <div class="h-40 bg-gray-200 rounded-md mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+              <h3 class="font-semibold text-lg text-blue-900 mb-2">Producto 2</h3>
+              <p class="text-yellow-500 font-bold mb-2">$14,990</p>
+              <button class="w-full bg-yellow-400 text-blue-900 font-semibold py-2 rounded-md hover:bg-yellow-500 transition">
+                Comprar
+              </button>
+            </div>
+          </div>
+          <div class="min-w-[25%] p-2">
+            <div class="border border-gray-300 rounded-lg p-4 hover:shadow-lg transition">
+              <div class="h-40 bg-gray-200 rounded-md mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+              <h3 class="font-semibold text-lg text-blue-900 mb-2">Producto 3</h3>
+              <p class="text-yellow-500 font-bold mb-2">$7,490</p>
+              <button class="w-full bg-yellow-400 text-blue-900 font-semibold py-2 rounded-md hover:bg-yellow-500 transition">
+                Comprar
+              </button>
+            </div>
+          </div>
+          <div class="min-w-[25%] p-2">
+            <div class="border border-gray-300 rounded-lg p-4 hover:shadow-lg transition">
+              <div class="h-40 bg-gray-200 rounded-md mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+              <h3 class="font-semibold text-lg text-blue-900 mb-2">Producto 4</h3>
+              <p class="text-yellow-500 font-bold mb-2">$12,990</p>
+              <button class="w-full bg-yellow-400 text-blue-900 font-semibold py-2 rounded-md hover:bg-yellow-500 transition">
+                Comprar
+              </button>
+            </div>
+          </div>
+          <div class="min-w-[25%] p-2">
+            <div class="border border-gray-300 rounded-lg p-4 hover:shadow-lg transition">
+              <div class="h-40 bg-gray-200 rounded-md mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+              <h3 class="font-semibold text-lg text-blue-900 mb-2">Producto 5</h3>
+              <p class="text-yellow-500 font-bold mb-2">$9,990</p>
+              <button class="w-full bg-yellow-400 text-blue-900 font-semibold py-2 rounded-md hover:bg-yellow-500 transition">
+                Comprar
+              </button>
+            </div>
+          </div>
+          <div class="min-w-[25%] p-2">
+            <div class="border border-gray-300 rounded-lg p-4 hover:shadow-lg transition">
+              <div class="h-40 bg-gray-200 rounded-md mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+              <h3 class="font-semibold text-lg text-blue-900 mb-2">Producto 6</h3>
+              <p class="text-yellow-500 font-bold mb-2">$14,990</p>
+              <button class="w-full bg-yellow-400 text-blue-900 font-semibold py-2 rounded-md hover:bg-yellow-500 transition">
+                Comprar
+              </button>
+            </div>
+          </div>
+          <div class="min-w-[25%] p-2">
+            <div class="border border-gray-300 rounded-lg p-4 hover:shadow-lg transition">
+              <div class="h-40 bg-gray-200 rounded-md mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+              <h3 class="font-semibold text-lg text-blue-900 mb-2">Producto 7</h3>
+              <p class="text-yellow-500 font-bold mb-2">$7,490</p>
+              <button class="w-full bg-yellow-400 text-blue-900 font-semibold py-2 rounded-md hover:bg-yellow-500 transition">
+                Comprar
+              </button>
+            </div>
+          </div>
+          <div class="min-w-[25%] p-2">
+            <div class="border border-gray-300 rounded-lg p-4 hover:shadow-lg transition">
+              <div class="h-40 bg-gray-200 rounded-md mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+              <h3 class="font-semibold text-lg text-blue-900 mb-2">Producto 8</h3>
+              <p class="text-yellow-500 font-bold mb-2">$12,990</p>
+              <button class="w-full bg-yellow-400 text-blue-900 font-semibold py-2 rounded-md hover:bg-yellow-500 transition">
+                Comprar
+              </button>
+            </div>
+          </div>
+          <div class="min-w-[25%] p-2">
+            <div class="border border-gray-300 rounded-lg p-4 hover:shadow-lg transition">
+              <div class="h-40 bg-gray-200 rounded-md mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+              <h3 class="font-semibold text-lg text-blue-900 mb-2">Producto 9</h3>
+              <p class="text-yellow-500 font-bold mb-2">$9,990</p>
+              <button class="w-full bg-yellow-400 text-blue-900 font-semibold py-2 rounded-md hover:bg-yellow-500 transition">
+                Comprar
+              </button>
+            </div>
+          </div>
+          <div class="min-w-[25%] p-2">
+            <div class="border border-gray-300 rounded-lg p-4 hover:shadow-lg transition">
+              <div class="h-40 bg-gray-200 rounded-md mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+              <h3 class="font-semibold text-lg text-blue-900 mb-2">Producto 10</h3>
+              <p class="text-yellow-500 font-bold mb-2">$14,990</p>
+              <button class="w-full bg-yellow-400 text-blue-900 font-semibold py-2 rounded-md hover:bg-yellow-500 transition">
+                Comprar
+              </button>
+            </div>
+          </div>
+          <div class="min-w-[25%] p-2">
+            <div class="border border-gray-300 rounded-lg p-4 hover:shadow-lg transition">
+              <div class="h-40 bg-gray-200 rounded-md mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+              <h3 class="font-semibold text-lg text-blue-900 mb-2">Producto 11</h3>
+              <p class="text-yellow-500 font-bold mb-2">$7,490</p>
+              <button class="w-full bg-yellow-400 text-blue-900 font-semibold py-2 rounded-md hover:bg-yellow-500 transition">
+                Comprar
+              </button>
+            </div>
+          </div>
+          <div class="min-w-[25%] p-2">
+            <div class="border border-gray-300 rounded-lg p-4 hover:shadow-lg transition">
+              <div class="h-40 bg-gray-200 rounded-md mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+              <h3 class="font-semibold text-lg text-blue-900 mb-2">Producto 12</h3>
+              <p class="text-yellow-500 font-bold mb-2">$12,990</p>
+              <button class="w-full bg-yellow-400 text-blue-900 font-semibold py-2 rounded-md hover:bg-yellow-500 transition">
+                Comprar
+              </button>
+            </div>
+          </div>
+          <div class="min-w-[25%] p-2">
+            <div class="border border-gray-300 rounded-lg p-4 hover:shadow-lg transition">
+              <div class="h-40 bg-gray-200 rounded-md mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+              <h3 class="font-semibold text-lg text-blue-900 mb-2">Producto 13</h3>
+              <p class="text-yellow-500 font-bold mb-2">$9,990</p>
+              <button class="w-full bg-yellow-400 text-blue-900 font-semibold py-2 rounded-md hover:bg-yellow-500 transition">
+                Comprar
+              </button>
+            </div>
+          </div>
+          <div class="min-w-[25%] p-2">
+            <div class="border border-gray-300 rounded-lg p-4 hover:shadow-lg transition">
+              <div class="h-40 bg-gray-200 rounded-md mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+              <h3 class="font-semibold text-lg text-blue-900 mb-2">Producto 14</h3>
+              <p class="text-yellow-500 font-bold mb-2">$14,990</p>
+              <button class="w-full bg-yellow-400 text-blue-900 font-semibold py-2 rounded-md hover:bg-yellow-500 transition">
+                Comprar
+              </button>
+            </div>
+          </div>
+          <div class="min-w-[25%] p-2">
+            <div class="border border-gray-300 rounded-lg p-4 hover:shadow-lg transition">
+              <div class="h-40 bg-gray-200 rounded-md mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+              <h3 class="font-semibold text-lg text-blue-900 mb-2">Producto 15</h3>
+              <p class="text-yellow-500 font-bold mb-2">$7,490</p>
+              <button class="w-full bg-yellow-400 text-blue-900 font-semibold py-2 rounded-md hover:bg-yellow-500 transition">
+                Comprar
+              </button>
+            </div>
+          </div>
+          <div class="min-w-[25%] p-2">
+            <div class="border border-gray-300 rounded-lg p-4 hover:shadow-lg transition">
+              <div class="h-40 bg-gray-200 rounded-md mb-4 flex items-center justify-center text-gray-400">Imagen</div>
+              <h3 class="font-semibold text-lg text-blue-900 mb-2">Producto 16</h3>
+              <p class="text-yellow-500 font-bold mb-2">$12,990</p>
+              <button class="w-full bg-yellow-400 text-blue-900 font-semibold py-2 rounded-md hover:bg-yellow-500 transition">
+                Comprar
+              </button>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="border border-gray-300 rounded-lg p-4 hover:shadow-lg transition">
-        <div class="h-48 bg-gray-200 rounded-md mb-4 flex items-center justify-center text-gray-400">Imagen</div>
-        <h3 class="font-semibold text-lg text-blue-900 mb-2">Producto 2</h3>
-        <p class="text-yellow-500 font-bold mb-2">$14,990</p>
-        <button class="w-full bg-yellow-400 text-blue-900 font-semibold py-2 rounded-md hover:bg-yellow-500 transition">
-          Comprar
-        </button>
-      </div>
-      <div class="border border-gray-300 rounded-lg p-4 hover:shadow-lg transition">
-        <div class="h-48 bg-gray-200 rounded-md mb-4 flex items-center justify-center text-gray-400">Imagen</div>
-        <h3 class="font-semibold text-lg text-blue-900 mb-2">Producto 3</h3>
-        <p class="text-yellow-500 font-bold mb-2">$7,490</p>
-        <button class="w-full bg-yellow-400 text-blue-900 font-semibold py-2 rounded-md hover:bg-yellow-500 transition">
-          Comprar
-        </button>
-      </div>
-      <div class="border border-gray-300 rounded-lg p-4 hover:shadow-lg transition">
-        <div class="h-48 bg-gray-200 rounded-md mb-4 flex items-center justify-center text-gray-400">Imagen</div>
-        <h3 class="font-semibold text-lg text-blue-900 mb-2">Producto 4</h3>
-        <p class="text-yellow-500 font-bold mb-2">$12,990</p>
-        <button class="w-full bg-yellow-400 text-blue-900 font-semibold py-2 rounded-md hover:bg-yellow-500 transition">
-          Comprar
-        </button>
-      </div>
+      <button id="nextBtn" class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-yellow-400 text-blue-900 p-2 rounded-full hover:bg-yellow-500 transition z-10">
+        &#8594;
+      </button>
     </div>
   </section>
 
@@ -115,5 +253,29 @@
       <p>© 2024 Farmacias El Sol. Todos los derechos reservados.</p>
     </div>
   </footer>
+
+  <script>
+    const carousel = document.getElementById('carouselInner');
+    const prevBtn = document.getElementById('prevBtn');
+    const nextBtn = document.getElementById('nextBtn');
+    let currentIndex = 0;
+    const totalItems = carousel.children.length;
+    const itemsPerPage = 4;
+
+    function updateCarousel() {
+      const offset = -currentIndex * 100;
+      carousel.style.transform = `translateX(${offset}%)`;
+    }
+
+    prevBtn.addEventListener('click', () => {
+      currentIndex = (currentIndex - 1 + Math.ceil(totalItems / itemsPerPage)) % Math.ceil(totalItems / itemsPerPage);
+      updateCarousel();
+    });
+
+    nextBtn.addEventListener('click', () => {
+      currentIndex = (currentIndex + 1) % Math.ceil(totalItems / itemsPerPage);
+      updateCarousel();
+    });
+  </script>
 </body>
 </html>
