--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header class="bg-white shadow-md">
     <div class="container mx-auto flex items-center justify-between p-4">
       <div class="text-2xl font-bold text-blue-900">Farmacias El Sol</div>
-      <nav class="space-x-6 text-blue-900 font-semibold relative">
+      <nav class="space-x-6 text-blue-900 font-semibold relative flex items-center">
         <a href="index.html" class="hover:text-yellow-500 transition">Inicio</a>
         <div class="group inline-block relative">
           <button class="hover:text-yellow-500 transition inline-flex items-center">
@@ -45,7 +45,80 @@
         </div>
         <a href="ofertas.html" class="hover:text-yellow-500 transition font-bold">Ofertas</a>
         <a href="contacto.html" class="hover:text-yellow-500 transition">Contacto</a>
+        <button id="loginBtn" class="ml-auto hover:text-yellow-500 transition font-semibold bg-transparent border-none cursor-pointer">Iniciar Sesión / Registrarse</button>
       </nav>
+
+      <!-- Login Modal -->
+      <div id="loginModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50">
+        <div class="bg-white rounded-lg p-6 w-full max-w-md relative">
+          <button id="closeModal" class="absolute top-2 right-2 text-gray-600 hover:text-gray-900 text-xl font-bold">&times;</button>
+          <h2 class="text-2xl font-bold text-blue-900 mb-4">Iniciar Sesión</h2>
+          <form id="login-form" class="space-y-4">
+            <div>
+              <label for="email" class="block font-semibold mb-1">Correo Electrónico</label>
+              <input type="email" id="email" name="email" required class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-yellow-400" />
+            </div>
+            <div>
+              <label for="password" class="block font-semibold mb-1">Contraseña</label>
+              <input type="password" id="password" name="password" required class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-yellow-400" />
+            </div>
+            <button type="submit" class="w-full bg-yellow-400 text-blue-900 font-bold py-2 rounded hover:bg-yellow-500 transition">Ingresar</button>
+          </form>
+          <p id="login-error" class="text-red-600 mt-2 hidden"></p>
+          <p class="mt-4 text-center">¿No tienes cuenta? <a href="register.html" class="text-yellow-400 hover:underline">Regístrate aquí</a></p>
+        </div>
+      </div>
+
+      <script>
+        const loginBtn = document.getElementById('loginBtn');
+        const loginModal = document.getElementById('loginModal');
+        const closeModal = document.getElementById('closeModal');
+        const loginForm = document.getElementById('login-form');
+        const loginError = document.getElementById('login-error');
+
+        loginBtn.addEventListener('click', () => {
+          loginModal.classList.remove('hidden');
+        });
+
+        closeModal.addEventListener('click', () => {
+          loginModal.classList.add('hidden');
+          loginError.textContent = '';
+          loginError.classList.add('hidden');
+          loginForm.reset();
+        });
+
+        loginForm.addEventListener('submit', async (e) => {
+          e.preventDefault();
+          loginError.textContent = '';
+          loginError.classList.add('hidden');
+
+          const email = loginForm.email.value;
+          const password = loginForm.password.value;
+
+          try {
+            const res = await fetch('/login', {
+              method: 'POST',
+              headers: {'Content-Type': 'application/json'},
+              body: JSON.stringify({email, password})
+            });
+            const data = await res.json();
+            if (res.ok) {
+              // Save token and redirect to homepage or user dashboard
+              localStorage.setItem('token', data.token);
+              localStorage.setItem('role', data.role);
+              loginModal.classList.add('hidden');
+              loginForm.reset();
+              alert('Inicio de sesión exitoso');
+            } else {
+              loginError.textContent = data.message || 'Credenciales inválidas';
+              loginError.classList.remove('hidden');
+            }
+          } catch (err) {
+            loginError.textContent = 'Error de conexión';
+            loginError.classList.remove('hidden');
+          }
+        });
+      </script>
       <div>
         <input
           type="search"
